--- a/canvas/bubble.html
+++ b/canvas/bubble.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Canvas系列</title>
-  <style type="text/css" >
-    #canvas{
+  <title>Canvas小球碰撞</title>
+  <style type="text/css">
+    #canvas {
       background: #eeeeee;
       border: 1px solid #000000;
     }
   </style>
 </head>
+
 <body>
 
-  <canvas  id="canvas" width="600" height="400"/>
+  <canvas id="canvas" width="600" height="400" />
 
   <script type="text/javascript">
     // 获取元素
@@ -23,27 +25,30 @@
     let context = canvas.getContext('2d');
 
     class Ball {
-      constructor(context, options = {}){
+      constructor(context, options = {}) {
         this.context = context;
-        this.x = 300;
-        this.y = 200;
-        this.radius = options.radius || 20;
+        this.x = canvas.width / 2;
+        this.y = canvas.height / 2;
+        this.radius = options.radius || 20; //方向
         this.color = options.color || '#000';
-        this.vx = options.vx || 0;
+        this.vx = options.vx || 0;  //x方向速度
         this.vy = options.vy || 0;
-        this.ax = options.ax || 0;
+        this.ax = options.ax || 0;  //加速度
         this.ay = options.ay || 0;
         this.mass = options.mass || 0; // 质量
         if (this.mass <= 0) {
-          this.mass = Math.pow(this.radius,3) / Math.pow(20,3);
+          this.mass = 1;
         }
       }
 
       update() {
-        this.vx += this.ax;
-        this.vy += this.ay;
-        this.x += this.vx;
-        this.y += this.vy;
+        if (this.vx > 0 || this.vy > 0) {
+          this.vx -= this.ax;
+          this.vy -= this.ay;
+          this.x += this.vx;
+          this.y += this.vy;
+        }
+
       }
 
       draw() {
@@ -56,19 +61,20 @@
     }
 
     let balls = [];
-    let colors = ['red','blue','yellow','green','orange'];
-    for (let i = 0; i < 2; i++) {
-      balls.push(new Ball(context,{
+    let colors = ['red', 'blue', 'yellow', 'green', 'orange'];
+    for (let i = 0; i < 20; i++) {
+      balls.push(new Ball(context, {
         x: (i + 1) * 50,
         y: 190,
-        radius: Math.floor(Math.random() * 10 + 15), 
+        radius: Math.floor(Math.random() * 10 + 15),
         vx: Math.random() * 6 - 3,
         vy: Math.random() * 6 - 3,
         color: colors[Math.floor(Math.random() * colors.length)],
       }));
     }
+    console.log(balls)
 
-    function checkWalls(ball){
+    function checkWalls(ball) {
       // 边界反弹
       if (ball.x < ball.radius) {
         ball.x = ball.radius;
@@ -77,7 +83,7 @@
         ball.x = canvas.width - ball.radius;
         ball.vx *= -1;
       }
-      
+
       if (ball.y < ball.radius) {
         ball.y = ball.radius;
         ball.vy *= -1;
@@ -89,18 +95,18 @@
       }
     }
 
-    function draw(ball){
+    function draw(ball) {
       ball.draw();
     }
 
-    function rotate (x, y, sin, cos, reverse) {
+    function rotate(x, y, sin, cos, reverse) {
       return {
         x: (reverse) ? (x * cos + y * sin) : (x * cos - y * sin),
         y: (reverse) ? (y * cos - x * sin) : (y * cos + x * sin)
       };
     }
 
-    function checkCollision(ball0,ball1) {
+    function checkCollision(ball0, ball1) {
       let dx = ball1.x - ball0.x;
       let dy = ball1.y - ball0.y;
       let dist = Math.sqrt(dx * dx + dy * dy);
@@ -111,7 +117,7 @@
         let cos = Math.cos(angle);
 
         // boll0旋转后小球的位置
-        let pos0 = {x: 0, y: 0};
+        let pos0 = { x: 0, y: 0 };
         // boll1旋转后小球的位置
         let pos1 = rotate(dx, dy, sin, cos, true);
         // ball0旋转后的速度
@@ -121,7 +127,7 @@
 
         let vxTotal = vel0.x - vel1.x;
         vel0.x = ((ball0.mass - ball1.mass) * vel0.x + 2 * ball1.mass * vel1.x) /
-                  (ball0.mass + ball1.mass);
+          (ball0.mass + ball1.mass);
         vel1.x = vxTotal + vel0.x;
 
         // 两小球的x坐标加上速度 计算出新的x坐标
@@ -152,57 +158,12 @@
       }
     }
 
-    // function checkCollision (ball0, ball1) {
-    //     var dx = ball1.x - ball0.x,
-    //         dy = ball1.y - ball0.y,
-    //         dist = Math.sqrt(dx * dx + dy * dy);
-    //     //collision handling code here
-    //     if (dist < ball0.radius + ball1.radius) {
-    //       //calculate angle, sine, and cosine
-    //       var angle = Math.atan2(dy, dx),
-    //           sin = Math.sin(angle),
-    //           cos = Math.cos(angle),
-    //           //rotate ball0's position
-    //           pos0 = {x: 0, y: 0}, //point
-    //           //rotate ball1's position
-    //           pos1 = rotate(dx, dy, sin, cos, true),
-    //           //rotate ball0's velocity
-    //           vel0 = rotate(ball0.vx, ball0.vy, sin, cos, true),
-    //           //rotate ball1's velocity
-    //           vel1 = rotate(ball1.vx, ball1.vy, sin, cos, true),
-    //           //collision reaction
-    //           vxTotal = vel0.x - vel1.x;
-    //       vel0.x = ((ball0.mass - ball1.mass) * vel0.x + 2 * ball1.mass * vel1.x) /
-    //                (ball0.mass + ball1.mass);
-    //       vel1.x = vxTotal + vel0.x;
-    //       //update position - to avoid objects becoming stuck together
-    //       var absV = Math.abs(vel0.x) + Math.abs(vel1.x),
-    //           overlap = (ball0.radius + ball1.radius) - Math.abs(pos0.x - pos1.x);
-    //       pos0.x += vel0.x / absV * overlap;
-    //       pos1.x += vel1.x / absV * overlap;
-    //       //rotate positions back
-    //       var pos0F = rotate(pos0.x, pos0.y, sin, cos, false),
-    //           pos1F = rotate(pos1.x, pos1.y, sin, cos, false);
-    //       //adjust positions to actual screen positions
-    //       ball1.x = ball0.x + pos1F.x;
-    //       ball1.y = ball0.y + pos1F.y;
-    //       ball0.x = ball0.x + pos0F.x;
-    //       ball0.y = ball0.y + pos0F.y;
-    //       //rotate velocities back
-    //       var vel0F = rotate(vel0.x, vel0.y, sin, cos, false),
-    //           vel1F = rotate(vel1.x, vel1.y, sin, cos, false);
-    //       ball0.vx = vel0F.x;
-    //       ball0.vy = vel0F.y;
-    //       ball1.vx = vel1F.x;
-    //       ball1.vy = vel1F.y;
-    //     }
-    //   }
-
-    function animate (){
+    function animate() {
+      console.log(balls[0])
       requestAnimationFrame(animate);
       context.clearRect(0, 0, canvas.width, canvas.height);
 
-      balls.forEach(ball=>{
+      balls.forEach(ball => {
         // 更新小球的速度
         ball.update();
         // 检测是否碰撞到边界
@@ -223,4 +184,5 @@
     animate();
   </script>
 </body>
+
 </html>
